Updated the GPIO command to add in new features for PWM Updated wiringPi to add new PWM controls.

--- a/gpio/Makefile
+++ b/gpio/Makefile
@@ -41,7 +41,7 @@ OBJ	=	gpio.o
 
 all:		gpio
 
-gpio:	gpio.o
+gpio:	gpio.o /usr/local/lib/libwiringPi.a
 	@echo [LD]
 	@$(CC) -o $@ gpio.o $(LDFLAGS) $(LIBS)
 	
