Updating gpio manual page

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -39,7 +39,12 @@ SRC	=	test1.c test2.c speed.c lcd.c wfi.c piface.c gertboard.c nes.c delayTest.c
 
 OBJ	=	test1.o test2.o speed.o lcd.o wfi.o piface.o gertboard.o nes.o delayTest.o softPwm.o
 
-all:		test1 test2 speed lcd wfi piface gertboard nes softPwm
+BINS	=	test1 test2 speed lcd wfi piface gertboard nes delayTest softPwm
+
+all:	
+	@cat README.TXT
+	@echo "    $(BINS)" | fmt
+	@echo ""
 
 test1:	test1.o
 	@echo [link]
@@ -76,7 +81,6 @@ nes:	nes.o
 softPwm:	softPwm.o
 	@echo [link]
 	$(CC) -o $@ softPwm.o $(LDFLAGS) $(LIBS) -lm -lpthread
-
 
 delayTest:	delayTest.o
 	@echo [link]
