--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -21,64 +21,93 @@
 #    along with wiringPi.  If not, see <http://www.gnu.org/licenses/>.
 #################################################################################
 
+DYN_VERS_MAJ=1
+DYN_VERS_MIN=0
 
-TARGET=libwiringPi.a
+STATIC=libwiringPi.a
+DYNAMIC=libwiringPi.so.$(DYN_VERS_MAJ).$(DYN_VERS_MIN)
 
 #DEBUG	= -g -O0
-DEBUG	= -O3
+DEBUG	= -O2
 CC	= gcc
 INCLUDE	= -I.
-CFLAGS	= $(DEBUG) -Wall $(INCLUDE) -Winline -pipe
+CFLAGS	= $(DEBUG) -Wall $(INCLUDE) -Winline -pipe -fPIC
 
 LIBS    =
 
 # Should not alter anything below this line
 ###############################################################################
 
-SRC	=	wiringPi.c wiringPiFace.c wiringSerial.c wiringShift.c lcd.c piHiPri.c piThread.c
+SRC	=	wiringPi.c wiringPiFace.c wiringSerial.c wiringShift.c	\
+		gertboard.c						\
+		piNes.c							\
+		lcd.c piHiPri.c piThread.c softPwm.c wiringPiSPI.c
 
-OBJ	=	wiringPi.o wiringPiFace.o wiringSerial.o wiringShift.o lcd.o piHiPri.o piThread.o
+OBJ	=	$(SRC:.c=.o)
 
-all:		$(TARGET)
+#all:		$(STATIC) $(DYNAMIC)
+all:		$(DYNAMIC)
 
-$(TARGET):	$(OBJ)
-	@echo [AR] $(OBJ)
-	@ar rcs $(TARGET) $(OBJ)
-	@ranlib $(TARGET)
-	@size   $(TARGET)
+$(STATIC):	$(OBJ)
+	@echo [Link (Static)]
+	@ar rcs $(STATIC) $(OBJ)
+	@ranlib $(STATIC)
+	@size   $(STATIC)
+
+$(DYNAMIC):	$(OBJ)
+	@echo [Link]
+	@$(CC) -shared -Wl,-soname,libwiringPi.so.1 -o libwiringPi.so.1.0 -lpthread $(OBJ)
 
 .c.o:
-	@echo [CC] $<
+	@echo [Compile] $<
 	@$(CC) -c $(CFLAGS) $< -o $@
 
+.PHONEY:	clean
 clean:
-	rm -f $(OBJ) $(TARGET) *~ core tags Makefile.bak
+	rm -f $(OBJ) *~ core tags Makefile.bak libwiringPi.*
 
+.PHONEY:	tags
 tags:	$(SRC)
 	@echo [ctags]
 	@ctags $(SRC)
 
+.PHONEY:	install
+install:	$(TARGET)
+	@echo "[Install]"
+	@install -m 0755 -d /usr/local/lib
+	@install -m 0755 -d /usr/local/include
+	@install -m 0644 wiringPi.h	/usr/local/include
+	@install -m 0644 wiringSerial.h	/usr/local/include
+	@install -m 0644 wiringShift.h	/usr/local/include
+	@install -m 0644 gertboard.h	/usr/local/include
+	@install -m 0644 piNes.h		/usr/local/include
+	@install -m 0644 softPwm.h	/usr/local/include
+	@install -m 0644 lcd.h		/usr/local/include
+	@install -m 0644 wiringPiSPI.h	/usr/local/include
+#	@install -m 0644 libwiringPi.a	/usr/local/lib
+	@install	-m 0755 libwiringPi.so.1.0 /usr/local/lib
+	@ln -sf /usr/local/lib/libwiringPi.so.1.0 /usr/local/lib/libwiringPi.so
+	@ln -sf /usr/local/lib/libwiringPi.so.1.0 /usr/local/lib/libwiringPi.so.1
+	@ldconfig
+
+.PHONEY:	uninstall
+uninstall:
+	@echo "[UnInstall]"
+	@rm -f /usr/local/include/wiringPi.h
+	@rm -f /usr/local/include/wiringSerial.h
+	@rm -f /usr/local/include/wiringShift.h
+	@rm -f /usr/local/include/gertboard.h
+	@rm -f /usr/local/include/piNes.h
+	@rm -f /usr/local/include/softPwm.h
+	@rm -f /usr/local/include/lcd.h
+	@rm -f /usr/local/include/wiringPiSPI.h
+	@rm -f /usr/local/lib/libwiringPi.*
+	@ldconfig
+
+
+.PHONEY:	depend
 depend:
 	makedepend -Y $(SRC)
-
-install:	$(TARGET)
-	@echo [install]
-	install -m 0755 -d /usr/local/lib
-	install -m 0755 -d /usr/local/include
-	install -m 0644 wiringPi.h	/usr/local/include
-	install -m 0644 wiringSerial.h	/usr/local/include
-	install -m 0644 wiringShift.h	/usr/local/include
-	install -m 0644 lcd.h		/usr/local/include
-	install -m 0644 libwiringPi.a	/usr/local/lib
-
-uninstall:
-	@echo [uninstall]
-	rm -f /usr/local/include/lcd.h
-	rm -f /usr/local/include/wiringShift.h
-	rm -f /usr/local/include/wiringPi.h
-	rm -f /usr/local/lib/libwiringPi.a
-
-
 
 # DO NOT DELETE
 
@@ -86,6 +115,10 @@ wiringPi.o: wiringPi.h
 wiringPiFace.o: wiringPi.h
 wiringSerial.o: wiringSerial.h
 wiringShift.o: wiringPi.h wiringShift.h
+gertboard.o: wiringPiSPI.h gertboard.h
+piNes.o: wiringPi.h piNes.h
 lcd.o: wiringPi.h lcd.h
 piHiPri.o: wiringPi.h
 piThread.o: wiringPi.h
+softPwm.o: wiringPi.h softPwm.h
+wiringPiSPI.o: wiringPiSPI.h
