--- a/build
+++ b/build
@@ -56,13 +56,13 @@ else
 
 # Check for I2C being installed...
 
-  if [ ! -f /usr/include/linux/i2c-dev.h ]; then
-    i2c-install
-  fi
-  grep -q i2c_smbus_read_byte /usr/include/linux/i2c-dev.h
-  if [ $? = 1 ]; then
-    i2c-install
-  fi
+# if [ ! -f /usr/include/linux/i2c-dev.h ]; then
+#   i2c-install
+# fi
+# grep -q i2c_smbus_read_byte /usr/include/linux/i2c-dev.h
+# if [ $? = 1 ]; then
+#   i2c-install
+# fi
 
   echo "WiringPi library"
   cd wiringPi
