--- a/build
+++ b/build
@@ -1,20 +1,5 @@
 #!/bin/bash
 
-i2c-install()
-{
- echo "* wiringPi needs the I2C Development Libraires installing."
- echo ""
- echo "If using Debian/Raspbian, then type this command:"
- echo "  sudo apt-get install libi2c-dev"
- echo "then run ./build again."
- echo ""
- echo "If using another Linux distribution, then you will have to"
- echo "work out how to install the I2C Developmen Libraries for your"
- echo "system. (Sorry - I don't know - do let me know though!)"
- echo ""
- exit 1
-}
-
 check-make-ok()
 {
   if [ $? != 0 ]; then
@@ -28,7 +13,6 @@ check-make-ok()
   fi
 }
 
-
 if [ x$1 = "xclean" ]; then
   echo Cleaning
   echo
@@ -38,8 +22,10 @@ if [ x$1 = "xclean" ]; then
   make clean
   cd ../examples
   make clean
-  cd ..
-elif [ x$1 = "xuninstall" ]; then
+  exit
+fi
+
+if [ x$1 = "xuninstall" ]; then
   echo Uninstalling
   echo
   echo "WiringPi library"
@@ -50,27 +36,37 @@ elif [ x$1 = "xuninstall" ]; then
   cd ../gpio
   sudo make uninstall
   cd ..
-else
-  echo wiringPi Build script - please wait...
+  exit
+fi
+
+
+  echo "wiringPi Build script"
+  echo "====================="
   echo
 
 # Check for I2C being installed...
+#	... and if-so, then automatically make the I2C helpers
 
-# if [ ! -f /usr/include/linux/i2c-dev.h ]; then
-#   i2c-install
-# fi
-# grep -q i2c_smbus_read_byte /usr/include/linux/i2c-dev.h
-# if [ $? = 1 ]; then
-#   i2c-install
-# fi
+  if [ -f /usr/include/linux/i2c-dev.h ]; then
+    grep -q i2c_smbus_read_byte /usr/include/linux/i2c-dev.h
+    if [ $? = 0 ]; then
+      target=i2c
+      echo "Building wiringPi with the I2C helper libraries."
+    else
+      target=all
+      echo "The wiringPi I2C helper libraries will not be built."
+    fi
+  fi
 
+  echo
   echo "WiringPi library"
   cd wiringPi
   sudo make uninstall
-  make
+  make $target
   check-make-ok
   sudo make install
   check-make-ok
+
   echo
   echo "GPIO Utility"
   cd ../gpio
@@ -78,12 +74,12 @@ else
   check-make-ok
   sudo make install
   check-make-ok
-  echo
-  echo "Examples"
-  cd ../examples
-  make
-  cd ..
-fi
+
+# echo
+# echo "Examples"
+# cd ../examples
+# make
+# cd ..
 
 echo
 echo All Done.
